<resources>
    <string name="app_name">Something!</string>
    <string name="Logo">S</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="login_require">Login to Continue</string>
    <string name="register_require">Register to Continue</string>
    <string name="register_btn">Regiter</string>
    <string name="welcome_txt">Welcome to Lungo!!</string>
    <string name="enter_email">Email address</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Re-type password</string>
    <string name="name">Name</string>
    <string name="remember">Remember this password</string>
    <string name="dont_have_account">Do not have account?</string>
    <string name="have_account">You have account?</string>
</resources>