<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="64dp"
            android:layout_height="72dp"
            android:layout_margin="10dp"
            android:background="@drawable/logo_border"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/Logo"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/welcome_txt"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_require"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/enter_field"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="true"
            android:padding="3dp" />

        <EditText
            android:id="@+id/email_edt_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/enter_field"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:padding="3dp" />

        <EditText
            android:id="@+id/pass_edt_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/enter_field"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="3dp" />

        <EditText
            android:id="@+id/retypepass_edt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/enter_field"
            android:singleLine="true"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="3dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_register_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_border"
            android:backgroundTint="@color/dark_green"
            android:gravity="center"
            android:text="@string/register_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/have_account"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nav_login_btn"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_border"
            android:backgroundTint="@color/dark_green"
            android:gravity="center"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>